fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,15 +9,17 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
-.animate-spin {
-  animation: spin 1s linear infinite;
-}
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
 
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
   }
 }
